# SciLabs

Lab1/: CMakeLists.txt  seal  task1-torus.cpp  task2-seal.cpp  torus
Lab1/mesh/: seal.msh  torus.msh
Lab1/stl/: torus.stl
Lab2/: CMakeLists.txt  seal  seal-vtk.cpp
Lab2/res/: seal-10.vtu  seal-100.vtu  seal-1000.vtu  seal-1010.vtu  seal-1020.vtu  seal-1030.vtu  seal-1040.vtu  seal-1050.vtu  seal-1060.vtu  seal-1070.vtu  seal-1080.vtu  seal-1090.vtu  seal-110.vtu  seal-1100.vtu  seal-1110.vtu  seal-1120.vtu  seal-1130.vtu  seal-1140.vtu  seal-1150.vtu  seal-1160.vtu  seal-1170.vtu  seal-1180.vtu  seal-1190.vtu  seal-120.vtu  seal-1200.vtu  seal-1210.vtu  seal-1220.vtu  seal-1230.vtu  seal-1240.vtu  seal-1250.vtu  seal-1260.vtu  seal-1270.vtu  seal-1280.vtu  seal-1290.vtu  seal-130.vtu  seal-1300.vtu  seal-1310.vtu  seal-1320.vtu  seal-1330.vtu  seal-1340.vtu  (+460 more)
Lab2/stl/: Popo.stl
Lab3/: CMakeLists.txt  crown  lab3  main.cpp
Lab3/mesh/: crown.msh  crown.xml  crown_gmshgeometrical.xml
Lab3/res/: poisson000000.vtu
Lab3/src/: crown.cpp  main.cpp
